--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <h3 class = "btn btn-info" style = "width: 100%; font-size: 23px; top:0; color: black;">
 Old DJ Web App
 <br>
-<p style = "font-size: 23px; color: white;">Note - Raise your left or right hand to play the first song. Raise both hands to play the second song. Stand away 2 feet for best results!</p>
+<p style = "font-size: 23px; color: white;">Note - Raise your left hand to play the first song. Raise both hands to play the second song. Stand away 2 feet for best results!</p>
 </h3>
 <br>
 <h3 style = "font-size: 23px;" class = "btn btn-danger">Song Name: <span id = "song_name_display"></span></h3>
